deploy/manifests/task-service/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: homie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: task-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "60Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
