deploy/manifests/task-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: homie
spec:
  type: NodePort
  selector:
    app: task-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: homie
spec:
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
  namespace: homie
subsets:
  - addresses:
      - ip: 192.168.0.253
    ports:
      - port: 5432
